<?xml version="1.0"?>
<package>
	<name>bas_environments</name>
	<version>1.0.0</version>
	<description>
		little_bas known environments, known goals and maps
	</description>

	<maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>
	<license>GPLv2</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>
	
</package>