<?xml version="1.0"?>
<package>
  <name>bas_teleop</name>
  <version>0.3.1</version>
  <description>
    little_bas teleoperation node, keyboard and joypad

    Nodes to republish joystick messages as a cmd_vel topic suitable for use with real or simulated Grizzly.

    Small modifications made by Oscar Lima (olima_84@yahoo.com) to adapt
    the teleop grizzly code to little bas robot.

    teleop keyboard node is entirely taken from other source
    (brsu bonn rhein sieg university of applied sciences germany robocup team)
  </description>

  <maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>
  <maintainer email="rgariepy@clearpathrobotics.com">Ryan Gariepy</maintainer>
  <author>Oscar Lima</author> <!-- coauthor, small adaptation contribution --> 
  <author>Ryan Gariepy</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libusb-dev</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>grizzly_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>joy</run_depend>
  
  <export>
  </export>
</package>
