<?xml version="1.0"?>
<package>
	<name>helloworld</name>
	<version>0.0.0</version>
	<description>
		cmake ros tutorial, it can be found under: http://wiki.ros.org/rosserial_arduino/Tutorials/CMake
	</description>

	<maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>

	<license>GPLv2</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>rosserial_arduino</build_depend>
	<build_depend>rosserial_client</build_depend>
	<build_depend>std_msgs</build_depend>
	<run_depend>rosserial_arduino</run_depend>
	<run_depend>rosserial_client</run_depend>
	<run_depend>std_msgs</run_depend>

</package>