<?xml version="1.0"?>
<package>
	<name>bas_bringup</name>
	<version>1.0.0</version>
	<description>
		launch all required nodes for little bas by using a launch file
	</description>

	<maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>
	<license>GPLv2</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>
	
</package>
