<?xml version="1.0"?>
<package>
	<name>bas_arm_driver_tester</name>
	<version>1.0.0</version>
	<description>
		Package used to test the bas arm driver
		trough dynamic reconfigure.
	</description>

	<maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>

	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>message_generation</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>
	<run_depend>message_runtime</run_depend>

</package>