<package>
	<name>bas_manipulation_msgs</name>
	<version>1.0.0</version>
	<description>
		Custom bas manipulation ros messages
	</description>
	
	<maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>

	<license>BSD</license>
	<author>Oscar Lima</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>

</package>
