<?xml version="1.0"?>
<package>
	<name>bas_teleop_base</name>
	<version>0.1.0</version>
	<description>
		teleoperation of the little_bas base via keyboard
	</description>

	<maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>
	<maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>
	
	<license>GPLv3</license>
	
	<author email="frederik.hegger@h-brs.de">Frederik Hegger</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_depend>roscpp</build_depend>

	<run_depend>geometry_msgs</run_depend>
  
</package>
