<?xml version="1.0"?>
<package>
	<name>bas_perception</name>
	<version>1.0.0</version>
	<description>
		bas perception pesudo metapackage, just contains a launch file
		which launches all required nodes for perception
	</description>

	<maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>
	<license>GPLv2</license>
	<buildtool_depend>catkin</buildtool_depend>
	
</package>