<?xml version="1.0"?>
<package>
	<name>blink</name>
	<version>0.0.0</version>
	<description>
		blink ros arduino tutorial (http://wiki.ros.org/rosserial_arduino/Tutorials/Blink)
		the only difference is that we are uploading the firmware not with the arduino IDE
		but with ros cmake arduino
	</description>

	<maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>

	<license>GPLv2</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>rosserial_arduino</build_depend>
	<build_depend>rosserial_client</build_depend>
	<build_depend>std_msgs</build_depend>
	<run_depend>rosserial_arduino</run_depend>
	<run_depend>rosserial_client</run_depend>
	<run_depend>std_msgs</run_depend>

</package>