<?xml version="1.0"?>
<package>
	<name>ros_arduino</name>
	<version>1.0.0</version>
	<description>
		little bas ros arduino metapackage
	</description>

	<maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>

	<license>GPLv2</license>

	<buildtool_depend>catkin</buildtool_depend>
	<export>
		<metapackage/>
	</export>
</package>